--- a/charts/backstage/backstage-rhtap-values.yaml
+++ b/charts/backstage/backstage-rhtap-values.yaml
@@ -280,7 +280,7 @@ upstream:
         externalAccess:
           - type: static
             options:
-              token: h5nbpC9Vgnp7uoQ3HkMDoa0ep2mjiV2D # not-secret
+              token: h5nbpC9Vgnp7uoQ3HkMDoa0ep2mjiV2D
               subject: orchestrator
 {% endif %}
 
