--- a/charts/backstage/backstage-values.yaml
+++ b/charts/backstage/backstage-values.yaml
@@ -8,6 +8,9 @@
     {% set orchestrator_enabled = true %}
 {% endif %}
 
+orchestrator:
+  token: "{{ '{{ randAlphaNum 24 }}' }}"
+
 global:
   auth:
     backend:
@@ -143,6 +146,11 @@ upstream:
         value: --no-node-snapshot
       - name: BACKEND_SECRET
         value: "{{ '{{ randAlphaNum 24 | b64enc }}' }}"
+      - name: ORCHESTRATOR_TOKEN
+        valueFrom:
+          secretKeyRef:
+            key: orchestrator-token
+            name: backstage-orchestrator-token
       - name: 'APP_CONFIG_app_baseUrl'
         value: 'https://{{ ocp4_workload_redhat_developer_hub_backstage_host }}'
       - name: 'APP_CONFIG_backend_baseUrl'
@@ -209,6 +217,14 @@ upstream:
 
     appConfig:
       backend:
+{% if orchestrator_enabled %}
+        auth:
+          externalAccess:
+            - type: static
+              options:
+                token: ${ORCHESTRATOR_TOKEN}
+                subject: orchestrator
+{% endif %}
         listen:
           port: 7007
           host: 0.0.0.0
@@ -281,13 +297,6 @@ upstream:
         environment: production
         providers:
           oauth2Proxy: {}
-{% if orchestrator_enabled %}
-        externalAccess:
-          - type: static
-            options:
-              token: h5nbpC9Vgnp7uoQ3HkMDoa0ep2mjiV2D
-              subject: orchestrator
-{% endif %}
 
       signInPage: oauth2Proxy
 
