--- a/charts/backstage/templates/secret-backstage-orchestrator-token.yaml
+++ b/charts/backstage/templates/secret-backstage-orchestrator-token.yaml
@@ -5,4 +5,4 @@ metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "-1"
 stringData:
-  orchestrator-token: {{ .Values.orchestrator.token }}
+  orchestrator-token: {{ randAlphaNum 24 }}
