--- a/charts/backstage/backstage-values.yaml
+++ b/charts/backstage/backstage-values.yaml
@@ -229,8 +229,9 @@ upstream:
 {% if orchestrator_enabled %}
           script-src: ["'self'", "'unsafe-inline'", "'unsafe-eval'"]
           script-src-elem: ["'self'", "'unsafe-inline'", "'unsafe-eval'"]
+          img-src: ["'self'", 'data:']
 {% endif %}
-          connect-src: ["'self'", 'http:', 'https:', 'data:']
+          connect-src: ["'self'", 'http:', 'https:','data:']
         cors:
           origin: https://{{ ocp4_workload_redhat_developer_hub_backstage_host }}
           methods: [GET, POST, PUT, DELETE]
