--- a/charts/backstage/backstage-rhtap-values.yaml
+++ b/charts/backstage/backstage-rhtap-values.yaml
@@ -49,8 +49,12 @@ global:
         disabled: false
       - package: ./dynamic-plugins/dist/backstage-plugin-techdocs-backend-dynamic
         disabled: false
-      - package: ./dynamic-plugins/dist/backstage-plugin-techdocs
+      - package: ./dynamic-plugins/dist/backstage-plugin-jenkins-backend-dynamic
         disabled: false
+      - package: ./dynamic-plugins/dist/backstage-plugin-jenkins
+        disabled: false
+      - package: ./dynamic-plugins/dist/backstage-plugin-techdocs
+        disabled: false        
       - package: ./dynamic-plugins/dist/janus-idp-backstage-plugin-tekton
         pluginConfig:
           dynamicPlugins:
@@ -382,7 +386,7 @@ upstream:
         github: false
         githubOrg: false
         gitlab: true
-        jenkins: false
+        jenkins: true
         permission: false
 
   postgresql:
