--- a/charts/backstage/backstage-rhtap-values.yaml
+++ b/charts/backstage/backstage-rhtap-values.yaml
@@ -49,12 +49,8 @@ global:
         disabled: false
       - package: ./dynamic-plugins/dist/backstage-plugin-techdocs-backend-dynamic
         disabled: false
-      - package: ./dynamic-plugins/dist/backstage-plugin-jenkins-backend-dynamic
-        disabled: false
-      - package: ./dynamic-plugins/dist/backstage-plugin-jenkins
-        disabled: false
       - package: ./dynamic-plugins/dist/backstage-plugin-techdocs
-        disabled: false        
+        disabled: false
       - package: ./dynamic-plugins/dist/janus-idp-backstage-plugin-tekton
         pluginConfig:
           dynamicPlugins:
@@ -280,13 +276,6 @@ upstream:
         # The UI url for Quay, used to generate the link to Quay
         uiUrl: 'https://{{ ocp4_workload_trusted_application_pipeline_quay_host }}'
 
-      jenkins:
-        instances:
-          - name: default
-            baseUrl: {{ ocp4_workload_trusted_application_pipeline_jenkins_host }}
-            username: admin
-            apiKey: {{ ocp4_workload_trusted_application_pipeline_jenkins_token }}
-
       techdocs:
         builder: 'external'
         generator:
@@ -386,7 +375,7 @@ upstream:
         github: false
         githubOrg: false
         gitlab: true
-        jenkins: true
+        jenkins: false
         permission: false
 
   postgresql:
