--- a/charts/backstage/backstage-rhtap-values.yaml
+++ b/charts/backstage/backstage-rhtap-values.yaml
@@ -36,7 +36,7 @@ global:
         disabled: false
       - package: ./dynamic-plugins/dist/backstage-plugin-kubernetes
         disabled: false
-      - package: ./dynamic-plugins/dist/janus-idp-backstage-plugin-topology
+      - package: ./dynamic-plugins/dist/backstage-community-plugin-topology
         disabled: false
       - package: ./dynamic-plugins/dist/roadiehq-backstage-plugin-argo-cd-backend-dynamic
         disabled: false
@@ -44,13 +44,13 @@ global:
         disabled: false
       - package: ./dynamic-plugins/dist/roadiehq-backstage-plugin-argo-cd
         disabled: true
-      - package: ./dynamic-plugins/dist/janus-idp-backstage-plugin-ocm
+      - package: ./dynamic-plugins/dist/backstage-community-plugin-ocm
         disabled: false
-      - package: ./dynamic-plugins/dist/janus-idp-backstage-plugin-ocm-backend-dynamic
+      - package: ./dynamic-plugins/dist/backstage-community-plugin-ocm-backend-dynamic
         disabled: false
       - package: ./dynamic-plugins/dist/roadiehq-scaffolder-backend-module-utils-dynamic
         disabled: false
-      - package: ./dynamic-plugins/dist/janus-idp-backstage-plugin-keycloak-backend-dynamic
+      - package: ./dynamic-plugins/dist/backstage-community-plugin-catalog-backend-module-keycloak-dynamic
         disabled: false
       - package: ./dynamic-plugins/dist/backstage-plugin-techdocs-backend-dynamic
         disabled: false
@@ -62,11 +62,11 @@ global:
 {% endif %}
       - package: ./dynamic-plugins/dist/backstage-plugin-techdocs
         disabled: false
-      - package: ./dynamic-plugins/dist/janus-idp-backstage-plugin-tekton
+      - package: ./dynamic-plugins/dist/backstage-community-plugin-tekton
         pluginConfig:
           dynamicPlugins:
             frontend:
-              janus-idp.backstage-plugin-tekton:
+              backstage-community.plugin-tekton:
                 mountPoints:
                   - mountPoint: entity.page.ci/cards
                     importName: TektonCI
@@ -78,27 +78,27 @@ global:
                         allOf:
                           - isTektonCIAvailable
         disabled: false
-      - package: ./dynamic-plugins/dist/janus-idp-backstage-plugin-quay
+      - package: ./dynamic-plugins/dist/backstage-community-plugin-quay
         disabled: false
-      - package: ./dynamic-plugins/dist/backstage-plugin-tech-radar
+      - package: ./dynamic-plugins/dist/backstage-community-plugin-tech-radar
         disabled: false
       - package:  ./dynamic-plugins/dist/backstage-community-plugin-redhat-argocd
         disabled: false
 {% if orchestrator_enabled %}
       - disabled: false
-        package: "@redhat/backstage-plugin-orchestrator-backend-dynamic@1.2.0"
-        integrity: sha512-lyw7IHuXsakTa5Pok8S2GK0imqrmXe3z+TcL7eB2sJYFqQPkCP5la1vqteL9/1EaI5eI6nKZ60WVRkPEldKBTg==
+        package: "@redhat/backstage-plugin-orchestrator-backend-dynamic@1.4.0"
+        integrity: sha512-2aOHDLFrGMAtyHFiyGZwVBZ9Op+TmKYUwfZxwoaGJ1s6JSy/0qgqineEEE0K3dn/f17XBUj+H1dwa5Al598Ugw==
         pluginConfig:
           orchestrator:
             dataIndexService:
               url: http://sonataflow-platform-data-index-service.sonataflow-infra
       - disabled: false
-        package: "@redhat/backstage-plugin-orchestrator@1.2.0"
-        integrity: sha512-FhM13wVXjjF39syowc4RnMC/gKm4TRlmh8lBrMwPXAw1VzgIADI8H6WVEs837poVX/tYSqj2WhehwzFqU6PuhA==
+        package: "@redhat/backstage-plugin-orchestrator@1.4.0"
+        integrity: sha512-2yasbfBZ3iKntArIfK+hk9tvv4b/dy9+WKXOcWIotqkI1gv+Nhvy+m55KAUWi2vmfM0rj3EoG6YP+3Zajn1KyA==
         pluginConfig:
           dynamicPlugins:
             frontend:
-              janus-idp.backstage-plugin-orchestrator:
+              red-hat-developer-hub.backstage-plugin-orchestrator:
                 appIcons:
                   - importName: OrchestratorIcon
                     module: OrchestratorPlugin
@@ -111,34 +111,13 @@ global:
                     module: OrchestratorPlugin
                     path: /orchestrator
       - disabled: false
-        package: "@redhat/plugin-notifications-dynamic@1.2.0"
-        integrity: sha512-1mhUl14v+x0Ta1o8Sp4KBa02izGXHd+wsiCVsDP/th6yWDFJsfSMf/DyMIn1Uhat1rQgVFRUMg8QgrvbgZCR/w==
-        pluginConfig:
-          dynamicPlugins:
-            frontend:
-              redhat.plugin-notifications:
-                dynamicRoutes:
-                  - importName: NotificationsPage
-                    menuItem:
-                      config:
-                        props:
-                          titleCounterEnabled: true
-                          webNotificationsEnabled: false
-                      importName: NotificationsSidebarItem
-                    path: /notifications
+        package: "./dynamic-plugins/dist/backstage-plugin-notifications"
       - disabled: false
-        package: "@redhat/plugin-signals-dynamic@1.2.0"
-        integrity: sha512-5tbZyRob0JDdrI97HXb7JqFIzNho1l7JuIkob66J+ZMAPCit+pjN1CUuPbpcglKyyIzULxq63jMBWONxcqNSXw==
-        pluginConfig:
-          dynamicPlugins:
-            frontend:
-              redhat.plugin-signals: {}
+        package: "./dynamic-plugins/dist/backstage-plugin-signals"
       - disabled: false
-        package: "@redhat/plugin-notifications-backend-dynamic@1.2.0"
-        integrity: sha512-pCFB/jZIG/Ip1wp67G0ZDJPp63E+aw66TX1rPiuSAbGSn+Mcnl8g+XlHLOMMTz+NPloHwj2/Tp4fSf59w/IOSw==
+        package: "./dynamic-plugins/dist/backstage-plugin-notifications-backend-dynamic"
       - disabled: false
-        package: "@redhat/plugin-signals-backend-dynamic@1.2.0"
-        integrity: sha512-DIISzxtjeJ4a9mX3TLcuGcavRHbCtQ5b52wHn+9+uENUL2IDbFoqmB4/9BQASaKIUSFkRKLYpc5doIkrnTVyrA==
+        package: "./dynamic-plugins/dist/backstage-plugin-signals-backend-dynamic"
 {% endif %}
 
 upstream:
@@ -286,7 +265,7 @@ upstream:
       quay:
         # The UI url for Quay, used to generate the link to Quay
         uiUrl: 'https://{{ ocp4_workload_trusted_application_pipeline_quay_host }}'
-        
+
 {% if jenkins_enabled %}
       jenkins:
         instances:
