--- a/charts/backstage/backstage-values.yaml
+++ b/charts/backstage/backstage-values.yaml
@@ -2,12 +2,6 @@
 #helm repo update
 #oc project backstage
 #helm install backstage backstage/backstage --values values.yaml
-{% if ocp4_workload_redhat_developer_hub_orchestrator_enabled is defined %}
-    {% set orchestrator_enabled = ocp4_workload_redhat_developer_hub_orchestrator_enabled %}
-{% else %}
-    {% set orchestrator_enabled = true %}
-{% endif %}
-
 global:
   auth:
     backend:
@@ -17,39 +11,11 @@ global:
     includes:
       - dynamic-plugins.default.yaml
     plugins:
-      - package: ./dynamic-plugins/dist/roadiehq-backstage-plugin-security-insights
-        disabled: false
-      - package: ./dynamic-plugins/dist/immobiliarelabs-backstage-plugin-gitlab-backend-dynamic
-        disabled: false
-      - package: ./dynamic-plugins/dist/immobiliarelabs-backstage-plugin-gitlab
-        disabled: false
-      - package: ./dynamic-plugins/dist/backstage-plugin-catalog-backend-module-gitlab-dynamic
-        disabled: false
-      - package: ./dynamic-plugins/dist/backstage-plugin-scaffolder-backend-module-gitlab-dynamic
-        disabled: false
-      - package: ./dynamic-plugins/dist/backstage-plugin-kubernetes-backend-dynamic
-        disabled: false
-      - package: ./dynamic-plugins/dist/backstage-plugin-kubernetes
-        disabled: false
-      - package: ./dynamic-plugins/dist/backstage-community-plugin-topology
-        disabled: false
+      - disabled: false
+        package: ./dynamic-plugins/dist/backstage-community-plugin-redhat-argocd
       - package: ./dynamic-plugins/dist/roadiehq-backstage-plugin-argo-cd-backend-dynamic
         disabled: false
       - package: ./dynamic-plugins/dist/roadiehq-scaffolder-backend-argocd-dynamic
-        disabled: false
-      - package: ./dynamic-plugins/dist/roadiehq-backstage-plugin-argo-cd
-        disabled: true
-      - package: ./dynamic-plugins/dist/backstage-community-plugin-ocm
-        disabled: false
-      - package: ./dynamic-plugins/dist/backstage-community-plugin-ocm-backend-dynamic
-        disabled: false
-      - package: ./dynamic-plugins/dist/roadiehq-scaffolder-backend-module-utils-dynamic
-        disabled: false
-      - package: ./dynamic-plugins/dist/backstage-community-plugin-catalog-backend-module-keycloak-dynamic
-        disabled: false
-      - package: ./dynamic-plugins/dist/backstage-plugin-techdocs-backend-dynamic
-        disabled: false
-      - package: ./dynamic-plugins/dist/backstage-plugin-techdocs
         disabled: false
       - package: ./dynamic-plugins/dist/backstage-community-plugin-tekton
         pluginConfig:
@@ -66,50 +32,76 @@ global:
                       if:
                         allOf:
                           - isTektonCIAvailable
+      - package: ./dynamic-plugins/dist/immobiliarelabs-backstage-plugin-gitlab-backend-dynamic
         disabled: false
+      - package: ./dynamic-plugins/dist/immobiliarelabs-backstage-plugin-gitlab
+        disabled: false
+      - disabled: false
+        package: ./dynamic-plugins/dist/backstage-plugin-scaffolder-backend-module-gitlab-dynamic
       - package: ./dynamic-plugins/dist/backstage-community-plugin-quay
         disabled: false
-      - package: ./dynamic-plugins/dist/backstage-community-plugin-tech-radar
+      - package: ./dynamic-plugins/dist/backstage-plugin-kubernetes-backend-dynamic
         disabled: false
-      - package:  ./dynamic-plugins/dist/backstage-community-plugin-redhat-argocd
+      - package: ./dynamic-plugins/dist/backstage-plugin-kubernetes
         disabled: false
-
-{% if orchestrator_enabled %}
       - disabled: false
-        package: "@redhat/backstage-plugin-orchestrator-backend-dynamic@1.4.0"
-        integrity: sha512-2aOHDLFrGMAtyHFiyGZwVBZ9Op+TmKYUwfZxwoaGJ1s6JSy/0qgqineEEE0K3dn/f17XBUj+H1dwa5Al598Ugw==
+        package: ./dynamic-plugins/dist/backstage-community-plugin-topology
+      - disabled: false
+        package: ./dynamic-plugins/dist/backstage-plugin-techdocs
+      - disabled: false
+        package: ./dynamic-plugins/dist/backstage-plugin-techdocs-backend-dynamic
+      - disabled: false
+        package: ./dynamic-plugins/dist/backstage-community-plugin-catalog-backend-module-keycloak-dynamic
+      - disabled: false
+        package: ./dynamic-plugins/dist/backstage-community-plugin-ocm
+      - disabled: false
+        package: ./dynamic-plugins/dist/backstage-community-plugin-ocm-backend-dynamic
+      - disabled: false
+        integrity: sha512-Kr55YbuVwEADwGef9o9wyimcgHmiwehPeAtVHa9g2RQYoSPEa6BeOlaPzB6W5Ke3M2bN/0j0XXtpLuvrlXQogA==
+        package: '@redhat/backstage-plugin-orchestrator-backend-dynamic@1.6.0'
         pluginConfig:
           orchestrator:
             dataIndexService:
               url: http://sonataflow-platform-data-index-service.sonataflow-infra
       - disabled: false
-        package: "@redhat/backstage-plugin-orchestrator@1.4.0"
-        integrity: sha512-2yasbfBZ3iKntArIfK+hk9tvv4b/dy9+WKXOcWIotqkI1gv+Nhvy+m55KAUWi2vmfM0rj3EoG6YP+3Zajn1KyA==
+        integrity: sha512-fOSJv2PgtD2urKwBM7p9W6gV/0UIHSf4pkZ9V/wQO0eg0Zi5Mys/CL1ba3nO9x9l84MX11UBZ2r7PPVJPrmOtw==
+        package: '@redhat/backstage-plugin-orchestrator@1.6.0'
         pluginConfig:
           dynamicPlugins:
             frontend:
               red-hat-developer-hub.backstage-plugin-orchestrator:
                 appIcons:
-                  - importName: OrchestratorIcon
-                    module: OrchestratorPlugin
-                    name: orchestratorIcon
+                - importName: OrchestratorIcon
+                  name: orchestratorIcon
                 dynamicRoutes:
-                  - importName: OrchestratorPage
-                    menuItem:
-                      icon: orchestratorIcon
-                      text: Orchestrator
-                    module: OrchestratorPlugin
-                    path: /orchestrator
+                - importName: OrchestratorPage
+                  menuItem:
+                    icon: orchestratorIcon
+                    text: Orchestrator
+                  path: /orchestrator
       - disabled: false
-        package: "./dynamic-plugins/dist/backstage-plugin-notifications"
+        integrity: sha512-Bueeix4661fXEnfJ9y31Yw91LXJgw6hJUG7lPVdESCi9VwBCjDB9Rm8u2yPqP8sriwr0OMtKtqD+Odn3LOPyVw==
+        package: '@redhat/backstage-plugin-scaffolder-backend-module-orchestrator-dynamic@1.6.0'
+        pluginConfig:
+          dynamicPlugins:
+            orchestrator:
+              dataIndexService:
+                url: http://sonataflow-platform-data-index-service.sonataflow-infra
       - disabled: false
-        package: "./dynamic-plugins/dist/backstage-plugin-signals"
+        integrity: sha512-Tqn6HO21Q1TQ7TFUoRhwBVCtSBzbQYz+OaanzzIB0R24O6YtVx3wR7Chtr5TzC05Vz5GkBO1+FZid8BKpqljgA==
+        package: '@redhat/backstage-plugin-orchestrator-form-widgets@1.6.0'
+        pluginConfig:
+          dynamicPlugins:
+            frontend:
+              red-hat-developer-hub.backstage-plugin-orchestrator-form-widgets: {}
       - disabled: false
-        package: "./dynamic-plugins/dist/backstage-plugin-notifications-backend-dynamic"
+        package: ./dynamic-plugins/dist/backstage-plugin-notifications
       - disabled: false
-        package: "./dynamic-plugins/dist/backstage-plugin-signals-backend-dynamic"
-
-{% endif %}
+        package: ./dynamic-plugins/dist/backstage-plugin-signals
+      - disabled: false
+        package: ./dynamic-plugins/dist/backstage-plugin-notifications-backend-dynamic
+      - disabled: false
+        package: ./dynamic-plugins/dist/backstage-plugin-signals-backend-dynamic
 
 upstream:
   backstage:
@@ -124,11 +116,6 @@ upstream:
         value: --no-node-snapshot
       - name: BACKEND_SECRET
         value: "{{ '{{ randAlphaNum 24 | b64enc }}' }}"
-      - name: ORCHESTRATOR_TOKEN
-        valueFrom:
-          secretKeyRef:
-            key: orchestrator-token
-            name: backstage-orchestrator-token
       - name: 'APP_CONFIG_app_baseUrl'
         value: 'https://{{ ocp4_workload_redhat_developer_hub_backstage_host }}'
       - name: 'APP_CONFIG_backend_baseUrl'
@@ -195,23 +182,16 @@ upstream:
 
     appConfig:
       backend:
-{% if orchestrator_enabled %}
         auth:
-          externalAccess:
-            - type: static
-              options:
-                token: ${ORCHESTRATOR_TOKEN}
-                subject: orchestrator
-{% endif %}
+          keys:
+          - secret: ${BACKEND_SECRET}
         listen:
           port: 7007
           host: 0.0.0.0
         csp:
-{% if orchestrator_enabled %}
           script-src: ["'self'", "'unsafe-inline'", "'unsafe-eval'"]
           script-src-elem: ["'self'", "'unsafe-inline'", "'unsafe-eval'"]
           img-src: ["'self'", 'data:']
-{% endif %}
           connect-src: ["'self'", 'http:', 'https:', 'data:']
         cors:
           origin: https://{{ ocp4_workload_redhat_developer_hub_backstage_host }}
@@ -258,19 +238,11 @@ upstream:
         uiUrl: 'https://{{ ocp4_workload_redhat_developer_hub_quay_host }}'
 
       techdocs:
-        builder: 'external'
+        builder: local
         generator:
-          runIn: 'local'
+          runIn: local
         publisher:
-          type: 'awsS3'
-          awsS3:
-            bucketName: {{ ocp4_workload_redhat_developer_hub_minio_bucket_name }}
-            region: us-east-2
-            endpoint: {{ ocp4_workload_redhat_developer_hub_minio_endpoint }}
-            s3ForcePathStyle: true
-            credentials:
-              accessKeyId: {{ ocp4_workload_redhat_developer_hub_minio_username }}
-              secretAccessKey: {{ ocp4_workload_redhat_developer_hub_minio_password }}
+          type: local
 
       auth:
         environment: production
