--- a/charts/backstage/backstage-values.yaml
+++ b/charts/backstage/backstage-values.yaml
@@ -123,6 +123,16 @@ upstream:
             name: backstage-postgresql
       - name: NODE_TLS_REJECT_UNAUTHORIZED
         value: "0"
+      - name: KEYCLOAK_CLIENT_ID
+        valueFrom:
+          secretKeyRef:
+            key: CLIENT_ID
+            name: keycloak-client-secret-backstage
+      - name: KEYCLOAK_CLIENT_SECRET
+        valueFrom:
+          secretKeyRef:
+            key: CLIENT_SECRET
+            name: keycloak-client-secret-backstage
       - name: LOG_LEVEL
         value: debug
     extraContainers:
@@ -159,6 +169,8 @@ upstream:
           - '--insecure-oidc-allow-unverified-email=true'
 
     appConfig:
+      app:
+        baseUrl: https://{{ ocp4_workload_redhat_developer_hub_backstage_host }}
       backend:
         auth:
           keys:
@@ -261,6 +273,13 @@ upstream:
                 # supports ISO duration, "human duration" as used in code
                 timeout: { seconds: 60 }
               owner: group:rhdh
+          keycloakOrg:
+            default:
+              baseUrl: {{ ocp4_workload_redhat_developer_hub_keycloak_host }}/auth
+              loginRealm: backstage
+              realm: backstage
+              clientId: ${KEYCLOAK_CLIENT_ID}
+              clientSecret: ${KEYCLOAK_CLIENT_SECRET}
 
       argocd:
         appLocatorMethods:
