--- a/charts/backstage/backstage-values.yaml
+++ b/charts/backstage/backstage-values.yaml
@@ -62,10 +62,8 @@ global:
       - disabled: false
         integrity: sha512-9cXbedr0lC7ns7SNqARrWSQI4JGcZFw5xpfpUzA1tJaMMUjzAdPHTXqljf62/fs4hYBK8TJsWJ2KJkGVMzbrHQ==
         package: '@redhat/backstage-plugin-orchestrator-backend-dynamic@1.7.1'
-        pluginConfig:
-          orchestrator:
-            dataIndexService:
-              url: http://sonataflow-platform-data-index-service.sonataflow-infra
+        dependencies:
+        - ref: sonataflow
       - disabled: false
         integrity: sha512-Cqu9EQwVQ4mpdgWTUA0MW89Gul0IklhvkkqVoO3CloQ1dnAj1XyXikCphzH5TmNDDd9K66dOpaKKCaW9KeJ4WA==
         package: '@redhat/backstage-plugin-orchestrator@1.7.1'
@@ -86,10 +84,9 @@ global:
         integrity: sha512-J1sTjA5kj6DphG8D65go9KlpIfKyLN/wq+XlY5Cb5djEo8mvF3wn3Haf60OGFo5cP4OfRSWqFwT7LM5/dNVwAg==
         package: '@redhat/backstage-plugin-scaffolder-backend-module-orchestrator-dynamic@1.7.1'
         pluginConfig:
-          dynamicPlugins:
-            orchestrator:
-              dataIndexService:
-                url: http://sonataflow-platform-data-index-service.sonataflow-infra
+          orchestrator:
+            dataIndexService:
+              url: http://sonataflow-platform-data-index-service
       - disabled: false
         integrity: sha512-0KIXrZoJ+O4xNNzN/zB4+VMuaRPuiUviAmM+fIhTo/P9aLA36F9aIlyMbUbki49uaJ0zd8KXMBvmJSHZNrYkGQ==
         package: '@redhat/backstage-plugin-orchestrator-form-widgets@1.7.1'
@@ -379,3 +376,49 @@ route:
   tls:
     enabled: true
     termination: "edge"
+
+orchestrator:
+  enabled: true
+  #  Disable Serverless Logic Operator if it already exists on the cluster
+  serverlessLogicOperator:
+    enabled: true
+  #  Disable Serverless Operator if it already exists on the cluster
+  serverlessOperator:
+    enabled: true
+  sonataflowPlatform:
+    monitoring:
+      enabled: true
+    eventing:
+      broker:
+        name: ""
+        namespace: ""
+    resources:
+      requests:
+        memory: "64Mi"
+        cpu: "250m"
+      limits:
+        memory: "1Gi"
+        cpu: "500m"
+    # -- Secret name for the user-created secret to connect an external DB
+    externalDBsecretRef: ""
+
+    # -- Name for the user-configured external Database
+    externalDBName: ""
+
+    # -- Host for the user-configured external Database
+    externalDBHost: ""
+
+    # -- Port for the user-configured external Database
+    externalDBPort: ""
+
+    # -- Image for the init container used by the create-db job
+    initContainerImage: "{{ .Values.upstream.postgresql.image.registry }}/{{ .Values.upstream.postgresql.image.repository }}:{{ .Values.upstream.postgresql.image.tag }}"
+
+    # -- Image for the container used by the create-db job
+    createDBJobImage: "{{ .Values.upstream.postgresql.image.registry }}/{{ .Values.upstream.postgresql.image.repository }}:{{ .Values.upstream.postgresql.image.tag }}"
+
+    # -- Image for the container used by the sonataflow jobs service, optional and used for disconnected environments
+    jobServiceImage: ""
+
+    # -- Image for the container used by the sonataflow data index, optional and used for disconnected environments
+    dataIndexImage: ""
