--- a/charts/backstage/backstage-values.yaml
+++ b/charts/backstage/backstage-values.yaml
@@ -412,11 +412,12 @@ orchestrator:
     externalDBPort: ""
 
     # -- Image for the init container used by the create-db job
+{% raw %}
     initContainerImage: "{{ .Values.upstream.postgresql.image.registry }}/{{ .Values.upstream.postgresql.image.repository }}:{{ .Values.upstream.postgresql.image.tag }}"
 
     # -- Image for the container used by the create-db job
     createDBJobImage: "{{ .Values.upstream.postgresql.image.registry }}/{{ .Values.upstream.postgresql.image.repository }}:{{ .Values.upstream.postgresql.image.tag }}"
-
+{% endraw %}
     # -- Image for the container used by the sonataflow jobs service, optional and used for disconnected environments
     jobServiceImage: ""
 
