--- a/charts/backstage/backstage-values.yaml
+++ b/charts/backstage/backstage-values.yaml
@@ -406,9 +406,11 @@ orchestrator:
     # -- Port for the user-configured external Database
     externalDBPort: ""
     # -- Image for the init container used by the create-db job
+{% raw %}
     initContainerImage: "{{ .Values.upstream.postgresql.image.registry }}/{{ .Values.upstream.postgresql.image.repository }}:{{ .Values.upstream.postgresql.image.tag }}"
     # -- Image for the container used by the create-db job
     createDBJobImage: "{{ .Values.upstream.postgresql.image.registry }}/{{ .Values.upstream.postgresql.image.repository }}:{{ .Values.upstream.postgresql.image.tag }}"
+{% endraw %}
   # -- Orchestrator plugins and their configuration
   plugins:
     - disabled: false
