--- a/charts/backstage/templates/cronjob-fix-migration-table-locked.yaml
+++ b/charts/backstage/templates/cronjob-fix-migration-table-locked.yaml
@@ -49,9 +49,9 @@ spec:
     
                     oc delete pod -l app=sonataflow-platform -n {{ .Release.Namespace }}        
 
-                    oc wait --for=condition=Ready pod -l app=sonataflow-platform -n default --timeout=300s
+                    oc wait --for=condition=Ready pod -l app=sonataflow-platform -n {{ .Release.Namespace }} --timeout=300s
 
-                    oc delete pod -n default -l 'sonataflow.org/workflow-app'
+                    oc delete pod -l sonataflow.org/workflow-app -n {{ .Release.Namespace }}
 
                   else
 
